--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "bootstrap": "^5.0.2",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.4.4",
-    "vue": "^2.6.10",
+    "vue": "^2.6.14",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
