--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.0.2",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.4.4",
+    "firebase": "^8.8.0",
     "vue": "^2.6.14",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
