이미지 업로드 구현...

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,3 +10,15 @@ spring.datasource.type=org.apache.commons.dbcp2.BasicDataSource
 # Mybatis Setting
 mybatis.type-aliases-package=com.ssafy.backend.**.model
 mybatis.mapper-locations=mapper/*.xml
+
+#aws3 설정
+cloud.aws.credentials.accessKey=AKIA2OBDDME37HVVV454
+cloud.aws.credentials.secretKey=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
+cloud.aws.stack.auto=false
+
+# AWS S3 Service bucket
+cloud.aws.s3.bucket=subpjt
+cloud.aws.region.static=ap-northeast-2
+
+# AWS S3 Bucket URL
+cloud.aws.s3.bucket.url=https://s3.ap-northeast-2.amazonaws.com/subpjt
