--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -51,6 +51,22 @@
 			<optional>true</optional>
 		</dependency>
 		
+		<!-- 클라우드 업로드 -->
+		<dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-starter-aws</artifactId>
+		    <version>2.0.1.RELEASE</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-aws-context</artifactId>
+		    <version>1.2.1.RELEASE</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-aws-autoconfigure</artifactId>
+		    <version>1.2.1.RELEASE</version>
+		</dependency>
 		
 		<!-- 메일전송  -->
 		<!-- https://mvnrepository.com/artifact/org.springframework/spring-context-support -->
