--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -176,6 +176,13 @@
 		    <artifactId>springfox-swagger-ui</artifactId>
 		    <version>2.9.2</version>
 		</dependency>
+		
+        <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+		<dependency>
+		    <groupId>org.jsoup</groupId>
+		    <artifactId>jsoup</artifactId>
+		    <version>1.14.1</version>
+		</dependency>
         
 	</dependencies>
 
