--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,11 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.4.4",
     "firebase": "^8.8.0",
+    "sockjs-client": "^1.5.1",
     "vue": "^2.6.14",
     "vue-router": "^3.1.3",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "webstomp-client": "^1.2.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
