--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8078
 
 #Mysql Database setting
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/subpjt2?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://i5c101.p.ssafy.io:3306/subpjt2?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=ssafy
 spring.datasource.type=org.apache.commons.dbcp2.BasicDataSource
