--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,8 +10,8 @@ build-back:
     # Java를 sdkman 으로 설치한 경우 JAVA_HOME 설정을 위해서만 필요
     - source "/home/ubuntu/.sdkman/bin/sdkman-init.sh"
     - cd $CI_PROJECT_DIR/backend
-    - chmod +x mvnw
-    - ./mvnw package
+    - chmod +x mvn
+    - ./mvn package
     - cp target/*.jar ~/app1.jar
   tags :
     # !! tag 값이 동일하게 설정된 Runner만 파이프라인을 동작시킴
@@ -30,9 +30,8 @@ build-front:
     # Node.js를 nvm 으로 설치한 경우만 필요
     - source "/home/ubuntu/.nvm/nvm.sh"
     - cd $CI_PROJECT_DIR/frontend
-    - yarn install
-    - yarn test
-    - yarn build
+    - npm install
+    - npm run build
     - rm -rf ~/subpjt3/frontend/dist
     - cp -rf dist ~/subpjt3/frontend/
   tags :
