--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,8 +12,8 @@ mybatis.type-aliases-package=com.ssafy.backend.**.model
 mybatis.mapper-locations=mapper/*.xml
 
 #aws3 설정
-cloud.aws.credentials.accessKey=AKIA2OBDDME37HVVV454
-cloud.aws.credentials.secretKey=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
+cloud.aws.credentials.accessKey=
+cloud.aws.credentials.secretKey=
 cloud.aws.stack.auto=false
 
 # AWS S3 Service bucket
